service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
  labels:
    app: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
