ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: guestbook.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
            name: guestbook-service
            port:
              number: 80
